<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
    android:fillViewport="true">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

      <EditText
          android:id="@+id/name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:hint="@string/name"
          android:inputType="textCapWords" />

      <EditText
          android:id="@+id/address"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:hint="@string/address"
          android:inputType="textMultiLine" />
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

         <TextView
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="@string/s_no"
             android:textAlignment="center"
             android:textSize="15sp"
             android:textStyle="bold"
             android:layout_weight="1"/>

         <TextView
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="@string/item_name"
             android:textAlignment="center"
             android:textSize="15sp"
             android:textStyle="bold"
             android:layout_weight="3"/>

         <TextView
             android:layout_width="72dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textSize="15sp"
             android:textStyle="bold"
             android:layout_weight="2"/>
      </LinearLayout>
   <TableLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/table"
       android:layout_margin="8dp">
      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <TextView
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             android:text="@string/_1"
             android:textSize="15sp"
             android:layout_weight="1"/>

         <EditText
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="15sp"
             android:layout_weight="3"/>

         <EditText
             android:layout_width="72dp"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="15sp"
             android:layout_weight="2"/>

      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

         <TextView
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             android:text="@string/_2"
             android:textSize="15sp"
             android:layout_weight="1"/>

         <EditText
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="15sp"
             android:layout_weight="3"/>

         <EditText
             android:layout_width="72dp"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="15sp"
             android:layout_weight="2"/>

      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

         <TextView
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             android:text="@string/_3"
             android:textSize="15sp"
             android:layout_weight="1"/>

         <EditText
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="15sp"
             android:layout_weight="3"/>

         <EditText
             android:layout_width="72dp"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="15sp"
             android:layout_weight="2"/>

      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

         <TextView
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             android:text="@string/_4"
             android:textSize="15sp"
             android:layout_weight="1"/>
         <EditText
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="15sp"
             android:layout_weight="3"/>

         <EditText
             android:layout_width="72dp"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="15sp"
             android:layout_weight="2"/>

      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

         <TextView
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             android:text="@string/_5"
             android:textSize="15sp"
             android:layout_weight="1"/>

         <EditText
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="15sp"
             android:layout_weight="3"/>

         <EditText
             android:layout_width="72dp"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="15sp"
             android:layout_weight="2"/>
      </TableRow>
   </TableLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:layout_marginBottom="1dp"
          android:orientation="horizontal">

         <Button
             style="@style/Widget.AppCompat.Button.Colored"
             android:id="@+id/addrow"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_margin="8dp"
             android:layout_toLeftOf="@id/shopkeeper"
             android:text="@string/add_row"
             android:theme="@style/ButtonTheme" />

         <EditText
             android:id="@+id/shopkeeper"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:hint="@string/shopkeeper_no"
             android:inputType="phone" />

         <Button
             style="@style/Widget.AppCompat.Button.Colored"
             android:id="@+id/send"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_margin="8dp"
             android:layout_toRightOf="@id/shopkeeper"
             android:text="@string/send"
             android:theme="@style/ButtonTheme" />
      </RelativeLayout>
   </LinearLayout>
</ScrollView>